# SocialGatheringAlgorithm

./: README.md
ModifiedSGAwithSolisWets/include/: Solucion.h  unix_timer.h
ModifiedSGAwithSolisWets/results_algPropio/: .~lock.results_cec2017_10.xlsx#  divergencia_10_10.txt  divergencia_10_30.txt  divergencia_11_10.txt  divergencia_11_30.txt  divergencia_12_10.txt  divergencia_12_30.txt  divergencia_13_10.txt  divergencia_13_30.txt  divergencia_14_10.txt  divergencia_14_30.txt  divergencia_15_10.txt  divergencia_15_30.txt  (+110 more)
SGA/: CMakeLists.txt
SGA/include/: utilidades.h
SGA/results_algPropioDefDiv/: .~lock.results_cec2017_10.xlsx#  divergencia_10_10.txt  divergencia_10_30.txt  divergencia_11_10.txt  divergencia_11_30.txt  divergencia_12_10.txt  divergencia_12_30.txt  divergencia_13_10.txt  divergencia_13_30.txt  divergencia_14_10.txt  divergencia_14_30.txt  divergencia_15_10.txt  divergencia_15_30.txt  divergencia_16_10.txt  divergencia_16_30.txt  divergencia_17_10.txt  divergencia_17_30.txt  divergencia_18_10.txt  divergencia_18_30.txt  divergencia_19_10.txt  divergencia_19_30.txt  divergencia_1_10.txt  divergencia_1_30.txt  divergencia_20_10.txt  divergencia_20_30.txt  divergencia_21_10.txt  divergencia_21_30.txt  divergencia_22_10.txt  divergencia_22_30.txt  divergencia_23_10.txt  divergencia_23_30.txt  divergencia_24_10.txt  divergencia_24_30.txt  divergencia_25_10.txt  divergencia_25_30.txt  divergencia_26_10.txt  divergencia_26_30.txt  divergencia_27_10.txt  divergencia_27_30.txt  divergencia_28_10.txt  (+83 more)
SGA/src/: algPropio.cc  utilidades.cc
(+99 files in other folders)
